--- a/src/AgeCalculator.css
+++ b/src/AgeCalculator.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-image: url("C:\Users\juanv\age-calculatorcd\src\old-bearded-senior-man-with-calculator-and-bills-counting-euro-money-at-home-2J1WMW6.jpg");
+    background-image: url("old-bearded-senior-man-with-calculator-and-bills-counting-euro-money-at-home-2J1WMW6.jpg");
     display: flex;
     justify-content: center;
     align-items: center;
